# f110_racecarbuggy

./: README.md  frames_2025-05-07_21.29.27.gv  frames_2025-05-07_21.29.46.gv  frames_2025-05-07_21.30.26.gv  rebuild.sh
src/avai_lab/: pyproject.toml
src/avai_lab/src/avai_lab/: config.py  enums.py  msg_conversion.py  test.py  track_gen.py  utils.py
src/avai_lab/src/avai_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/avai_lab/src/avai_lab/gazebo/: msg.py  service.py
src/f110_car/: CMakeLists.txt  mapper_params_online_async.yaml  package.xml  rviz_config.rviz  setup.cfg  setup.py
src/f110_car/f110_car/: exploration_node.py  exploration_visualizer_node.py  global_planning_node.py  init_drive_node.py  kill_switch_server.py  m2p_node.py
src/f110_car/launch/: f110.launch.py
src/gazebo/gazebo_f110/: mapper_params_online_async.yaml  package.xml  rviz_config.rviz  setup.cfg  setup.py
src/gazebo/gazebo_f110/gazebo_f110/: ackermann_to_twist.py  pose_transformer.py  world_pose_to_odom.py
src/gazebo/gazebo_f110/launch/: gazebo.launch.py  gazebo_min.launch.py
src/gazebo/gazebo_f110/model/blue_cone/: blue_cone.sdf  model.config
src/gazebo/gazebo_f110/model/car/: f110_car.sdf  model.config
src/gazebo/gazebo_f110/model/cone/: model.config  orange-cone.sdf
src/gazebo/gazebo_f110/model/cone/meshes/: cone_mesh.dae
src/gazebo/gazebo_f110/model/yellow_cone/: model.config  yellow_cone.sdf
src/gazebo/gazebo_f110/world/: circle.sdf  plane.sdf
src/kill_switch/: CMakeLists.txt  package.xml  setup.py
src/kill_switch/action/: ConnectKillSwitch.action
src/kill_switch/kill_switch/: kill_switch_node.py
src/racecar_msgs/: CMakeLists.txt  package.xml
src/racecar_msgs/msg/: DetectedCone.msg  DetectedConeArray.msg  SemanticCell.msg  SemanticGrid.msg
src/test_package/: data.yaml  package.xml  setup.py
src/test_package/runs/detect/train/: args.yaml  results.csv
src/test_package/test_package/nodes/: cone_marker_node.py  odom_tf_node.py  semantic_grid_visualizer_node.py  semantic_mapping_node.py  wasd_control_node.py  yolo_node.py  yolo_node_rgbd.py
